force-app/main/default/objects/Envoi_Logistique__c/Envoi_Logistique__c.object-meta.xml
<CustomObject>
    <label>Envoi Logistique</label>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>N° Envoi</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envois Logistiques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>