force-app/main/default/objects/Envoi_Logistique__c/fields/Commande_Pi_ces__c.field-meta.xml
<CustomField>
    <fullName>Commande_Pi_ces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande Pièces</label>
    <referenceTo>Commande_Pi_ces__c</referenceTo>
    <relationshipLabel>Envois Logistiques</relationshipLabel>
    <relationshipName>Envois_Logistiques</relationshipName>
    <type>Lookup</type>
</CustomField>