force-app/main/default/objects/Envoi_Logistique__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A traiter</fullName>
                <default>true</default>
                <label>A traiter</label>
            </value>
            <value>
                <fullName>Expédié</fullName>
            </value>
            <value>
                <fullName>Reçu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>