force-app/main/default/objects/Envoi_Logistique__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>sitetracker__Site__c</referenceTo>
    <relationshipLabel>Envois Logistiques</relationshipLabel>
    <relationshipName>Envois_Logistiques</relationshipName>
    <type>Lookup</type>
</CustomField>